--- a/style.css
+++ b/style.css
@@ -3,8 +3,23 @@
   padding: 0;
   box-sizing: border-box;
   list-style: none;
-  
+  font-family: 'Open Sans', sans-serif;}
+
+
+#historyList {
+  list-style: none;
+  padding: 0;
+  margin: 10px auto;
 }
+
+#historyList li {
+  padding: 5px 10px;
+  border: 1px solid #ddd;
+  margin-bottom: 5px;
+  cursor: pointer;
+}
+
+
 body{
   background: #ddd;
   height: 100vh;
@@ -27,6 +42,7 @@ section{
   gap: 20px;
   flex-direction: column;
 }
+
 .container{
   position: relative;
   height: 100%;
@@ -41,7 +57,7 @@ section{
   margin-bottom: 2rem;
 }
 .container .title {
-  border:1px solid #bbbccc;
+  border:1px solid #bbbccb;
   background: #dddeee;
   padding: 10px 20px;
   text-align: center;
@@ -79,9 +95,9 @@ section{
   box-shadow: 0 1px 5px #111;
   color: #fff;
   aspect-ratio: 16 / 9;
-  
+  background: #000;
 }
-.container .video_player .main-video{
+.container .video_player .video {
   height: 100%;
   width: 100%;
   position: relative;
@@ -96,9 +112,12 @@ section{
  /** background: #ccc;**/
   
   z-index: 3;
-  transform: translateY(0);
+  transform: translateY(0px);
   color: #fff;
   
+}
+.controls.active{
+  transform: translateY(0);
 }
 .timeline-container{
   width: 100%;
@@ -107,47 +126,20 @@ section{
   
 
 }
-.timeline-container .progress-timeline{
-  position: absolute;
-  width: 100%;
-  height: 3px;
- background: rgba(150,150,150,1);
+
+ .timeline-container  input[type="range"]{
+ width: 100%;
+ height: 5px;
+ position: absolute;
  bottom: 0;
- transition:height 150ms ease-in-out;
+ outline: none;
+ border: none;
  
+ }
+
+.timeline-container input::-webkit-slider-thumb{
+  transform: scale(.9);
 }
-.timeline-container:hover .progress-timeline{
- height: 100%;
-  
-}
-.timeline-container:hover .progress-timeline .thumble-indic{
-  height: 100%;
-}
-   .timeline-container .progress-timeline .thumble-indic{
-     position: absolute;
-     height: 3.1px;
-     width: 0;
-     background: red;
-     transition:height 150ms ease-in-out;
-     bottom: 0;
-     
-     
-   }.timeline-container:hover .progress-timeline .thumble-indic::before{
-     display: block;
-   }
-   .timeline-container .progress-timeline .thumble-indic::before{
-     position: absolute;
-     content: '';
-     height: 15px;
-     width: 15px;
-     border-radius: 50%;
-     background: red;
-     top: 50%;
-     right: -7px;
-     display: none;
-     transform: translateY(-50%) ;
-     transition: display 145ms ease-in-out;
-   }
    .container .controls .controls-list{
      display: flex;
      justify-content: space-between;
@@ -157,6 +149,7 @@ section{
      height: 45px;
      
    }
+  
    .container .controls .controls-list .controls-left, .container .controls .controls-list .controls-right{
      display: flex;
      align-items: center;
@@ -291,7 +284,25 @@ section{
   .video_player  #speed-settings .playback ul li:hover{
     background: #191919;
   } 
+  .video-file {
+    display: grid;
+    place-items: center;
+    height: 200px;
+    
+  }
   
+  .video-file input{
+    display: none;
+  }
+  .video-file label{
+    height: 50px;
+    width: 120px;
+    border: 1px dotted #000;
+    border-radius: 8px;
+   display: grid; 
+   place-items: center;
+   padding: 5px;
+  }
   .video-list {
     background: #fff;
     height: 550px;
@@ -303,8 +314,9 @@ section{
     flex-direction: column;
   padding: 3px;
   overflow-x: hidden;
+  border: 1px solid #111;
   }
-  .video-list .vid{
+ .video-list .vid{
     display: flex;
     align-items: center;
     width:100% ;
@@ -371,11 +383,11 @@ section{
     width: 135px;
     bottom: 53px;
   }
-  .video-list{
+.playlist  .video-list{
     width: 99vw;
     height: 400px;
   }
-  .video-list .vid video {
+ .playlist .video-list .vid video {
     width: 95px;
     border-radius: 4px;
   }
